# triad

./: .gitignore  README.md  package.json  pyproject.toml
desktop/: index.html  logo-preview.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  visual-parity.config.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: triad-bridge-aarch64-apple-darwin
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  ERROR_STATE_MATRIX.md  FRONTEND_POLISH_HANDOFF.md  OPEN_SOURCE_CHECKLIST.md  PARITY_MATRIX.md  PRODUCT_MAP.md  REFERENCE_SCREENS.md  RELEASE_PROCESS.md  design-tokens.json  desktop-visual-parity-workflow.md  fixes-plan.md
schemas/: stream-event.schema.json
scripts/: desktop_smoke.py  generate_stream_event_contract.py  release_gates.py  triad_debug_capture.sh
tests/: conftest.py  test_accounts.py  test_accounts_ui.py  test_blackboard.py  test_capabilities.py  test_config.py  test_critic_mode.py  test_critic_worktree.py  test_delegate_failclose.py  test_delegate_mode.py  test_desktop_diagnostics.py  test_desktop_file_watcher.py  test_desktop_fork.py  test_desktop_orchestrator.py  test_desktop_provider_streams.py  test_desktop_search.py  test_desktop_state.py  test_desktop_transfer.py  test_env.py  test_event_schema.py  test_execution_policy.py  test_export.py  test_ledger.py  test_models.py  test_patcher.py  test_policy.py  test_provider_sessions.py  test_providers.py  test_proxy.py  test_repo_artifacts.py  (+9 more)
(+158 files in other folders)
