[project]
name = "triad"
version = "0.1.0"
description = "Local orchestration control-plane for AI coding CLIs"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.90.0",
    "typer>=0.15.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
triad = "triad.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
