[package]
name = "triad-desktop"
version = "0.1.0"
description = "Triad Desktop"
authors = ["Triad"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
